[package]
name = "kv-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.9"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.54", features = ["derive"]}
colored = "3.0.0"
figlet-rs = "0.1.5"
anyhow = "1.0.100"

[build-dependencies]
tonic-build = "0.9"
