[package]
name = "mergedb-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.9"
toml = "0.5"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"
"rand" = "0.9.2"
mergedb-types = { path = "../mergedb-types" }
anyhow = "1.0.100"

[build-dependencies]
tonic-build = "0.9"
